--- a/lpo.cbp
+++ b/lpo.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="Fugvenyek.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="Fugvenyek.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
